modified:   13. Strings and Text Processing/Manipulating Strings.ipynb

--- a/13. Strings and Text Processing/Manipulating Strings.ipynb
+++ b/13. Strings and Text Processing/Manipulating Strings.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 74,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "metadata": {
     "vscode": {
      "languageId": "polyglot-notebook"
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 76,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 77,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 79,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 80,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 81,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 82,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 83,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 84,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 85,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 86,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -945,7 +945,18 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wood found at 9\n",
+      "wood found at 22\n",
+      "wood found at 44\n",
+      "wood found at 66\n"
+     ]
+    }
+   ],
    "source": [
     "while( matchIndex != -1 )\n",
     "{\n",
@@ -1047,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 87,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1186,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 88,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1255,7 +1266,7 @@
     }
    },
    "source": [
-    "One of the most flexible methods for working with strings is` Split(…)`.    \n",
+    "One of the most flexible methods for working with strings is `Split(…)`.    \n",
     "It allows us to split a string by either: \n",
     "1. An individual separator \n",
     "2. An array of separators"
@@ -1308,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 89,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1358,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 90,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1415,6 +1426,602 @@
    "source": [
     "beerList.Split(\", \")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Splitting Strings by Multiple Separators "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Now, let's say we have **multiple delimiters** that seperate each token of a collection, such as in this Wine List:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "string wineList = \"Shiraz,Merlot, Pino Noir|Reisling\";"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We can then store all the various delimeters in an array:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "string[] delimiters = new string[]{\",\", \", \", \"|\"};"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Having done so, we may now pass our `delimiters` array directly into the `Split(…)` method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>Shiraz</td></tr><tr><td>1</td><td>Merlot</td></tr><tr><td>2</td><td> Pino Noir</td></tr><tr><td>3</td><td>Reisling</td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "wineList.Split( delimiters, System.StringSplitOptions.None )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Note that we must pass in the `System.StringSplitOptions.None` Enum to be able to accomodate a string array, rather than the default character array.  \n",
+    "\n",
+    "The full list of `System.StringSplitOptions` **Fields** are as follows: "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<table class=\"nameValue cols3 table table-sm table-stacked-mobile\" aria-label=\"Fields\">\n",
+    "\t\t\t<tbody><tr>\n",
+    "\t\t\t\t<td id=\"system-stringsplitoptions-none\">\n",
+    "\t\t\t\t\t\t<code>None</code>\n",
+    "\t\t\t\t</td>\n",
+    "\t\t\t<td>0</td>\n",
+    "\t\t\t<td><p>Use the default options when splitting strings.</p>\n",
+    "</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr>\n",
+    "\t\t\t\t<td id=\"system-stringsplitoptions-removeemptyentries\">\n",
+    "\t\t\t\t\t\t<code>RemoveEmptyEntries</code>\n",
+    "\t\t\t\t</td>\n",
+    "\t\t\t<td>1</td>\n",
+    "\t\t\t<td><p>Omit array elements that contain an empty string from the result.</p>\n",
+    "<p>If <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.stringsplitoptions?view=net-7.0#system-stringsplitoptions-removeemptyentries\" data-linktype=\"relative-path\">RemoveEmptyEntries</a> and <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.stringsplitoptions?view=net-7.0#system-stringsplitoptions-trimentries\" data-linktype=\"relative-path\">TrimEntries</a> are specified together, then substrings that consist only of white-space characters are also removed from the result.</p>\n",
+    "</td>\n",
+    "\t\t\t</tr>\n",
+    "\t\t\t<tr data-moniker=\" net-5.0 net-6.0 net-7.0 \">\n",
+    "\t\t\t\t<td id=\"system-stringsplitoptions-trimentries\">\n",
+    "\t\t\t\t\t\t<code>TrimEntries</code>\n",
+    "\t\t\t\t</td>\n",
+    "\t\t\t<td>2</td>\n",
+    "\t\t\t<td><p>Trim white-space characters from each substring in the result. This field is available in .NET 5 and later versions only.</p>\n",
+    "<p>If <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.stringsplitoptions?view=net-7.0#system-stringsplitoptions-removeemptyentries\" data-linktype=\"relative-path\">RemoveEmptyEntries</a> and <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.stringsplitoptions?view=net-7.0#system-stringsplitoptions-trimentries\" data-linktype=\"relative-path\">TrimEntries</a> are specified together, then substrings that consist only of white-space characters are also removed from the result.</p>\n",
+    "</td>\n",
+    "\t\t\t</tr>\n",
+    "\t</tbody></table>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### How to Remove the Empty Elements after Splitting?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Suppose we had the following Tea List, which, despite having only a single delimeter, has some missing data in it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "string teaList = \"Darjeeling,,Earl Grey,,Green\";"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "If we were to `Split(…)` on the `','` delimiter, we would get **empty elements**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>Darjeeling</td></tr><tr><td>1</td><td></td></tr><tr><td>2</td><td>Earl Grey</td></tr><tr><td>3</td><td></td></tr><tr><td>4</td><td>Green</td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "teaList.Split(',')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We can **iteritively** **process the empty values**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Darjeeling\n",
+      "Earl Grey\n",
+      "Green\n"
+     ]
+    }
+   ],
+   "source": [
+    "foreach( string tea in teaList.Split(',') )\n",
+    "{\n",
+    "    if( tea != \"\" )\n",
+    "        Console.WriteLine( tea );\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Alternatively, we can simply provide `Split(…)` with the `System.StringSplitOptions.RemoveEmptyEntries` argument:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>Darjeeling</td></tr><tr><td>1</td><td>Earl Grey</td></tr><tr><td>2</td><td>Green</td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "teaList.Split( ',', System.StringSplitOptions.RemoveEmptyEntries )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": []
   }
  ],
  "metadata": {
