modified:   13. Strings and Text Processing/Manipulating Strings.ipynb

--- a/13. Strings and Text Processing/Manipulating Strings.ipynb
+++ b/13. Strings and Text Processing/Manipulating Strings.ipynb
@@ -446,7 +446,7 @@
     }
    },
    "source": [
-    "### Searching for a String within Another String"
+    "### Searching for a String Within Another String"
    ]
   },
   {
